--- a/campominato/index.html
+++ b/campominato/index.html
@@ -90,12 +90,18 @@
                 text-align: center;
                 cursor: pointer;
             }
+
+            /* .griglia-container {
+                display: flex;
+                flex-wrap: wrap;
+                justify-content: center;
+            } */
         </style>
     </head>
 
 <body>
     <button id="generaGriglia">Genera Griglia</button>
-    <div id="griglia"></div>
+    <div class="griglia-container" id="griglia"></div>
 
     <script src="main.js"></script>
 </body>
