--- a/campominato/index.html
+++ b/campominato/index.html
@@ -39,10 +39,7 @@
     <link rel="stylesheet" href="./style.css">
 
 
-    <title>Document</title>
-
-
-    <title>Griglia di Gioco</title>
+    <title>Campominato</title>
     <style>
         .cella {
             width: 40px;
@@ -52,19 +49,13 @@
             text-align: center;
             cursor: pointer;
         }
-
-        /* .griglia-container {
-                display: flex;
-                flex-wrap: wrap;
-                justify-content: center;
-            } */
     </style>
 </head>
 
 <body>
     <div class="d-flex justify-content-center">
         <button type="button" class="btn btn-primary m-5" id="generaGriglia">Genera Griglia</button>
-        <div class="griglia-container" id="griglia"></div>
+        <div id="griglia"></div>
     </div>
 
     <script src="main.js"></script>
